[package]
name = "tor-dirmgr"
version = "0.2.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Bootstrap and update an accurate Tor network directory"
keywords = ["tor", "arti", "download", "async"]
categories = ["network-programming", "cryptography"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = ["mmap"]
mmap = ["memmap2"]
static = ["rusqlite/bundled"]
# (Incomplete) support for downloading and storing router descriptors
routerdesc = ["tor-dirclient/routerdesc"]
dirfilter = []

# Enable experimental APIs that are not yet officially supported.
#
# These APIs are not covered by semantic versioning.  Using this
# feature voids your "semver warrantee".
experimental-api = []

[dependencies]
tor-basic-utils = "0.2.0"
retry-error = "0.1.0"
tor-checkable = "0.2.0"
tor-circmgr = "0.2.0"
tor-config = "0.2.0"
tor-consdiff = "0.2.0"
tor-dirclient = "0.2.0"
tor-error = "0.2.0"
tor-guardmgr = "0.2.0"
tor-netdir = "0.2.0"
tor-netdoc = "0.2.0"
tor-llcrypto = "0.2.0"
tor-rtcompat = "0.2.0"

async-trait = "0.1.2"
base64 = "0.13.0"
derive_builder = "0.11"
derive_more = "0.99"
digest = "0.10.0"
educe = "0.4.6"
event-listener = "2"
futures = "0.3.14"
fslock = { version = "0.2.0" }
hex = "0.4"
itertools = "0.10.1"
tracing = "0.1.18"
memmap2 = { version = "0.5.0", optional = true }
once_cell = "1"
postage = { version = "0.4", default-features = false, features = ["futures-traits"] }
rand = "0.8"
rusqlite = { version = "0.27.0", features = ["time"] }
serde = { version = "1.0.103", features = ["derive"] }
signature = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
humantime-serde = "1.1.1"

[dev-dependencies]
futures-await-test = "0.3.0"
hex-literal = "0.3"
tempfile = "3"
tor-rtcompat = { version = "0.2.0", features = ["tokio", "native-tls"] }
float_eq = "0.7"
